--- a/TableDetector/MainWindow.xaml
+++ b/TableDetector/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TableDetectionApp.MainWindow"
+﻿<Window x:Class="TableDetector.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Table Surface Detection" Height="700" Width="1200" 
@@ -11,11 +11,48 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
+        <!-- Settings Menu -->
+        <Menu Grid.Row="0" Grid.ColumnSpan="2" Background="#444444">
+            <MenuItem Header="File">
+                <MenuItem Header="Export Token Data..." Click="ExportTokenData_Click"/>
+                <MenuItem Header="Save Token Map..." Click="SaveTokenMap_Click"/>
+                <Separator/>
+                <MenuItem Header="Exit" Click="Exit_Click"/>
+            </MenuItem>
+            <MenuItem Header="Settings">
+                <MenuItem Header="Calibrate Tokens..." Click="CalibrateTokens_Click"/>
+                <Separator/>
+                <MenuItem Header="Export Settings..." Click="ExportSettings_Click"/>
+                <MenuItem Header="Import Settings..." Click="ImportSettings_Click"/>
+                <Separator/>
+                <MenuItem Header="Reset to Default Settings" Click="ResetSettings_Click"/>
+            </MenuItem>
+            <MenuItem Header="View">
+                <MenuItem x:Name="ShowROIMenuItem" Header="Show ROI" IsCheckable="True" IsChecked="True" Click="ShowROI_MenuClick"/>
+                <MenuItem x:Name="AngledViewMenuItem" Header="Angled View" IsCheckable="True" IsChecked="True" Click="AngledView_MenuClick"/>
+                <MenuItem x:Name="ShowDepthContoursMenuItem" Header="Show Depth Contours" IsCheckable="True" IsChecked="True" Click="ToggleContours_Click"/>
+                <Separator/>
+                <MenuItem x:Name="TrackTokensMenuItem" Header="Track Tokens" IsCheckable="True" IsChecked="True" Click="TrackTokens_MenuClick"/>
+                <MenuItem x:Name="ShowTokenLabelsMenuItem" Header="Show Token Labels" IsCheckable="True" IsChecked="True" Click="ShowTokenLabels_MenuClick"/>
+            </MenuItem>
+            <MenuItem Header="Tools">
+                <MenuItem Header="Find Largest Surface" Click="FindLargestSurface_Click"/>
+                <MenuItem Header="Lock Table Depth" Click="LockTable_Click"/>
+                <MenuItem Header="Unlock Table Depth" Click="UnlockTable_Click"/>
+                <Separator/>
+                <MenuItem Header="Diagnostic Info..." Click="Diagnose_Click"/>
+            </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="About..." Click="About_Click"/>
+            </MenuItem>
+        </Menu>
+
         <!-- Header -->
         <Border Grid.Row="0" Background="#333333" Padding="10">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Kinect Table Surface Detection" Foreground="White" FontSize="18" VerticalAlignment="Center"/>
+                <TextBlock Text="Kinect TTRPG Token Tracker" Foreground="White" FontSize="18" VerticalAlignment="Center"/>
                 <TextBlock Text="{Binding StatusText}" Foreground="White" Margin="20,0,0,0" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding TokenCountText}" Foreground="#AAFFAA" FontWeight="Bold" Margin="20,0,0,0" VerticalAlignment="Center"/>
             </StackPanel>
         </Border>
 
@@ -32,6 +69,8 @@
                     <Image x:Name="ColorImage" Stretch="Uniform"/>
                     <TextBlock Text="Color Feed" Foreground="White" Background="#80000000" 
                                Padding="5" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+                    <Canvas x:Name="TokenOverlayCanvas" Width="{Binding ActualWidth, ElementName=ColorImage}" 
+                           Height="{Binding ActualHeight, ElementName=ColorImage}"/>
                 </Grid>
             </Border>
 
@@ -48,12 +87,18 @@
         <!-- Controls -->
         <Border Grid.Row="2" Background="#333333" Padding="10">
             <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0" Orientation="Horizontal">
+                <!-- Table Detection Controls -->
+                <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
                     <TextBlock Text="Table Depth:" Foreground="White" VerticalAlignment="Center"/>
                     <TextBlock Text="{Binding TableDepthText}" Foreground="#AAFFAA" FontWeight="Bold" 
                                Margin="5,0,0,0" Width="120" VerticalAlignment="Center"/>
@@ -64,9 +109,24 @@
                     <Button Content="Find Largest Surface" Click="FindLargestSurface_Click" Margin="5,0,0,0" Padding="5,2"/>
                     <CheckBox Content="Angled View" IsChecked="True" Foreground="White" Margin="10,0,0,0" 
                               VerticalAlignment="Center" Name="AngledViewCheckBox" Checked="AngledView_Changed" Unchecked="AngledView_Changed"/>
+                    <CheckBox Content="Show ROI" IsChecked="True" Foreground="White" Margin="10,0,0,0" 
+                              VerticalAlignment="Center" Name="ShowROICheckBox" Checked="ShowROI_Changed" Unchecked="ShowROI_Changed"/>
                 </StackPanel>
 
-                <Button Grid.Column="1" Content="Diagnose Table Detection" Click="Diagnose_Click" Padding="10,2"/>
+                <!-- TTRPG Token Tracking Controls -->
+                <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" Margin="0,10,0,0">
+                    <TextBlock Text="Token Tracking:" Foreground="White" VerticalAlignment="Center"/>
+                    <CheckBox Content="Track Tokens" IsChecked="True" Foreground="White" Margin="10,0,0,0" 
+                              VerticalAlignment="Center" x:Name="TrackTokensCheckBox" Checked="TrackTokens_Changed" Unchecked="TrackTokens_Changed"/>
+                    <CheckBox Content="Show Labels" IsChecked="True" Foreground="White" Margin="10,0,0,0" 
+                              VerticalAlignment="Center" x:Name="ShowTokenLabelsCheckBox" Checked="ShowTokenLabels_Changed" Unchecked="ShowTokenLabels_Changed"/>
+                    <Slider Width="100" Minimum="5" Maximum="50" Value="15" Margin="10,0,0,0" VerticalAlignment="Center" 
+                            x:Name="TokenSizeThresholdSlider" ValueChanged="TokenSizeThreshold_Changed"/>
+                    <TextBlock Text="Size Threshold" Foreground="White" Margin="5,0,0,0" VerticalAlignment="Center"/>
+                    <Button Content="Calibrate Tokens" Click="CalibrateTokens_Click" Margin="20,0,0,0" Padding="5,2"/>
+                    <Button Content="Clear Tokens" Click="ClearTokens_Click" Margin="5,0,0,0" Padding="5,2"/>
+                    <Button Content="Save Token Map" Click="SaveTokenMap_Click" Margin="5,0,0,0" Padding="5,2"/>
+                </StackPanel>
             </Grid>
         </Border>
     </Grid>
